--- a/app/templates/users_team.html
+++ b/app/templates/users_team.html
@@ -44,7 +44,7 @@
                 {% if results %}
                     <div class="col-6">
                         <ul id="last_3_result">
-                        Очки за ближайшие туры:
+                        Очки за предыдущие туры:
                         {% for key, value in results.items %}
                             <li>{{ key }} тур: {{ value }}</li>
                         {% endfor %}
