1. end_tour editable=False, 2. delete . from greetings

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -39,7 +39,7 @@
         {% endif %}
         <div class="row align-items-center">
             <div class="col-12 col-md-6 text-align-center">
-                <h2 class="text-main">Добро пожаловать в Российскую Fantasy Лигу по хоккею на траве.</h2>
+                <h2 class="text-main">Добро пожаловать в Российскую Fantasy Лигу по хоккею на траве</h2>
                 <div class="button-wrapper">
                     <a class="btn btn-danger play-button" href="{% url 'accounts:conditions' %}" role="button">Играть</a>
                 </div>
