add bronze match to rules

--- a/app/templates/rules.html
+++ b/app/templates/rules.html
@@ -51,7 +51,7 @@
     <p>В рамках регулярного чемпионата российской Суперлиги по хоккею на траве туром называются спаренные матчи (2 игры) между двумя соперниками.
     В рамках общего тура(когда все команды встречаются в одном городе для кругового мини-турнира) – туром считаются все матчи этого мини-турнира.
     То есть состав команды, сформированный до его начала, сохраняется на все игры общего тура.
-    В рамках плей-офф игровым туром считается одна стадия - 1\8 финала; 1\4 финала; 1\2 финала; финал.
+    В рамках плей-офф игровым туром считается одна стадия - 1\8 финала; 1\4 финала; 1\2 финала; матч за бронзу; финал.
     </p>
     <h4>Как игроки набирают очки?</h4>
     <p>Очки начисляются игрокам команды за каждую игру, в которой они принимают участие.</p>
