fixed mistake in rules

--- a/app/templates/rules.html
+++ b/app/templates/rules.html
@@ -39,7 +39,7 @@
     </p>
     <h4>Кто такой капитан команды?</h4>
     <p>После определения состава, перед каждым игровым туром вы можете назначить капитана – набранные им очки будут удваиваться.
-    Если капитан по той или причине не смог принять участие в матче, привилегия удваивания очков теряется и не переходит ни к какому другому игроку.
+    Если капитан по той или иной причине не смог принять участие в матче, привилегия удваивания очков теряется и не переходит ни к какому другому игроку.
     </p>
     <h4>Как проводить трансферы?</h4>
     <p>После первоначального формирования команды, в дальнейшем вы сможете менять состав с помощью трансферов.
