add best player functional

--- a/app/templates/freeze_and_count.html
+++ b/app/templates/freeze_and_count.html
@@ -69,6 +69,16 @@
         <p>Нажатие этой кнопки начинает сезон. Нажать её можно только в межсезонье. Будьте аккуратны! До того, как она нажата пользователь не сможет сформировать команду.
         Но после - сможет!</p>
         <hr>
+        <div class="row">
+            <div class="d-inline-flex">
+                <div class="p-2">
+                    <button id="best_players" type="button" class="btn btn-success">Лучшие игроки</button>
+                </div>
+            </div>
+        </div>
+        <p>Нажатие этой кнопки показывает игроков, которых пользователи выбирают чаще всего. Эти игроки прямо сейчас в командах
+        у большинства юзеров. Данные выпадут в консоль, открыть её можно кнопкой F12.</p>
+        <hr>
     </div>
 
 {% endblock %}
